--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="@drawable/button_selector">
 
     <ImageView
         android:id="@+id/flagImageListView"
@@ -19,4 +20,10 @@
         android:textSize="16sp"
         android:layout_gravity="center"
         android:fontFamily="@font/poppinsregular"/>
+
+<!--    <Button-->
+<!--        android:id="@+id/myButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@drawable/button_selector"/>-->
 </LinearLayout>
